# mutli-command-cli

./: .gitignore  README.md  cli_demo.py  pyproject.toml
reports/: _main.py  cli_grader.py  cli_lifeline.py  cli_quickmath.py  group.py  report.html  report.qmd
